Fixing spacing etc

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -59,3 +59,7 @@ body {
     max-height: 200px;
     overflow-x: hidden;
 }
+
+padded-btn {
+    margin-top: 10px;
+}
